<resources>
    <string name="app_name">Calculadora</string>
    <string name="app_btn0">0</string>
    <string name="app_btn1">1</string>
    <string name="app_btn2">2</string>
    <string name="app_btn3">3</string>
    <string name="app_btn4">4</string>
    <string name="app_btn5">5</string>
    <string name="app_btn6">6</string>
    <string name="app_btn7">7</string>
    <string name="app_btn8">8</string>
    <string name="app_btn9">9</string>
    <string name="app_name_igual">=</string>
    <string name="app_name_suma">+</string>
    <string name="app_name_resta">-</string>
    <string name="app_name_producto">*</string>
    <string name="app_name_division">/</string>
    <string name="app_name_limpiar">C</string>
</resources>
